design - fix window popup content overflow on IOS

--- a/src/Shopsys/ShopBundle/Resources/styles/front/common/components/window/popup.less
+++ b/src/Shopsys/ShopBundle/Resources/styles/front/common/components/window/popup.less
@@ -78,6 +78,7 @@
 
     &__in {
         width: 100%;
+        height: 100%;
         max-height: calc( ~"100vh - 2 * @{window-popup-inner-padding} - 2 * @{window-popup-space-around-big}" );
         overflow: auto;
         flex: 1;
